--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -1,13 +1,15 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.18.106:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: null
+password: Password@321
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 collect_pg_stat_statements: true
 terminals: 1
+minThreads: '10'
+
 works:
     work:
         time_secs: 5
@@ -63,3 +65,31 @@ microbenchmark:
                         params:
                         - 1
                         - 1000
+        -   workload: RangeScan2
+            run:
+                -   name: ReadQuery1
+                    weight: 100
+                    queries:
+                        -   query: INSERT INTO demo100col VALUES(?,?)
+                            bindings:
+                                -   util: PrimaryIntGen
+                                    params:
+                                        - 10000
+                                        - 100000
+                                -   util: RandomAString
+                                    params:
+                                        - 5
+                                        - 5
+                -   name: WriteQuery2
+                    weight: 50
+                    queries:
+                        -   query: UPDATE demo100col set col1 = ? where id = ?
+                            bindings:
+                                -   util: RandomAString
+                                    params:
+                                        - 10
+                                        - 20
+                                -   util: RandomNumber
+                                    params:
+                                        - 1
+                                        - 1000
